chamber/styles/medium.css
@media only screen and (min-width: 37.5em) {
  article:nth-child(3) {
    grid-column: span 2;
  }
  .location {
    display: grid;
    grid-template-columns: 0.5fr 1fr 0.5fr;
  }
  main {
    grid-template-columns: 1fr 1fr 1fr;
  }
  nav a {
    font-size: 1rem;
  }
  .projectData div {
    display: inline;
    padding: 5px;
  }
  .projectData div {
    border-style: solid;
    border-width: 0 2px 0 0;
  }
  .projectData div:nth-child(4) {
    border-style: none;
  }
  #hero {
    grid-column: 1/4;
    grid-row: 1/2;
  }
  #news {
    grid-column: 1/4;
    grid-row: 2/3;
  }
  #join {
    grid-column: 1/4;
    grid-row: 4/5;
  }
  #event {
    grid-column: 1/3;
    grid-row: 5/6;
  }
  #weather {
    grid-column: 3/4;
    grid-row: 5/6;
  }
  .spotlight {
    grid-column: 1/4;
    grid-row: 3/4;
    display: flex;
  }
  .spotlight .article {
    width: 33%;
  }
  .discover-item {
    grid-column: 1/4;
    grid-template-columns: 2% 96% 2%;
  }
  .discover-item picture img:hover {
    position: relative;
    left: -15em;
    transform: scale(1.8);
    transition: width 2s, height 2s, transform 2s;
  }

  form input.submit-button { 
    margin: 0 0 2rem 4%;
  }

  .cards-grid section img {
    height: 200px;
  }

  .cards-list section img {
    display: block;
    width: 50px;
    box-shadow: 0 0 30px #000;
    border: 1px solid #333;
    margin: 1rem;
  }

  .contact {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
  
  .location-info {
    margin: 2rem;
    display: grid;
    grid-template-rows: .75fr 1fr;
  }

  .contact .submit-button {
    margin: 0 0 2rem 5%;
  }

  .spotlight .article .cards-grid {
    display: block;
  }
}

